<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- suppress MissingTranslation -->
    <string name="app_name">LocationBasedTrackingSystem</string>
    <string name="action_settings">Logout</string>
    <string name="action_location">Last Location</string>
    <string name="action_findfriend">Find Friend</string>
    <string name="hello_world">Hello world!</string>
    <string name="newtask_hpa">NEW TASK</string>
    <string name="upcoming_hpa">UP-COMING</string>
    <string name="passedtask_hpa">PASSED TASK</string>
    <string name="helping_hpa">HELPING</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="dailyroutine_nta">DAILY ROUTINE</string>
    <string name="weaklyroutine_nta">WEAKLY ROUTINE</string>
    <string name="title_activity_up_coming">UpComingActivity</string>
    <string name="edit_uca">EDIT</string>
    <string name="view_uca">VIEW</string>
    <string name="delete_uca">DELETE</string>
    <string name="title_activity_passed">PassedActivity</string>
    <string name="title_activity_helping">HelpingActivity</string>
    <string name="title_activity_daily_routine">DailyRoutineActivity</string>
    <string name="taskname_dra">Task Name</string>
    <string name="date_dra">Date</string>
    <string name="location_dra">Location</string>
    <string name="radius_dra">Radius</string>
    <string name="searchnearby_dra">Search Nearby</string>
    <string name="time_dra">Time</string>
    <string name="save_dra">SAVE</string>
    <string name="cancel_dra">CANCEL</string>
    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="set_da">SET</string>
    <string name="cancel_da">CANCEL</string>
    <string name="currentDate_da">Current Date</string>
    <string name="datehint_dra">m/d/yyyy</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="address_ma">ADDRESS BAR</string>
    <string name="saveLocation_ma">SAVE LOCATION</string>
    <string name="title_activity_demo_map">DemoMapActivity</string>
    <string name="addressbar_dma">Address Bar</string>
    <string name="location_dma">SAVE LOCATION</string>
    <string name="title_activity_favorite_place">FavoritePlaceActivity</string>
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="findbt_ma">FIND</string>
    <string name="findbut_ma">Find</string>
    <string name="location_ma">Enter Location</string>
    <string name="add_fpa">ADD</string>
    <string name="delete_fpa">DELETE</string>
    <string name="edit_fpa">EDIT</string>
    <string name="help_hpa">Location Based Task Reminder</string>
    <string name="help_page_intro"></string>
    <string name="TaskName_pt">TaskName</string>
    <string name="taskDate_pt">TaskDate</string>
    <string name="TaskTime_pt">Task Time</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_notify_alarm">NotifyAlarmActivity</string>
    <string name="notify_txt">New Notification Please Check......</string>
    <string name="title_activity_place_list">PlaceListActivity</string>
    <string name="title_activity_single_place">SinglePlaceActivity</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="reg_fn">First Name</string>
    <string name="reg_ln">Last Name</string>
    <string name="reg_login">Login</string>
    <string name="reg_pwd">Password</string>
    <string name="reg_address">Address</string>
    <string name="reg_mn">Mobile No</string>
    <string name="reg_register">Register</string>
    <string name="but_signin">Sign In</string>
    <string name="but_signup">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_list">Find Friend</string>

</resources>