<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DailyRoutineActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/taskname_dra"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/taskname_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/tasknametxt_dra"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:ems="10" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/date_dra"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/date_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/datetxt_dra"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/datehint_dra"
            android:inputType="date" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/location_dra"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/location_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_location1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/radius_dra"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/radius_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_radius"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/searchnearby_dra"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/searchnearby_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_searchnearby"
            android:layout_width="150dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/timeTxt_dra"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/time_dra"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/time_dra"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/save_dra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.86"
            android:text="@string/save_dra" />

        <Button
            android:id="@+id/cancel_dra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.86"
            android:text="@string/cancel_dra" />
    </LinearLayout>

</LinearLayout>