<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        

            <TextView
                android:id="@+id/taskName_pt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.48"
                android:text="@string/TaskName_pt"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/taskDate_pa"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/taskDate_pt"
                android:textSize="18dp" 
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/taskTime_pa"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/TaskTime_pt"
                android:textSize="18dp"
                android:paddingLeft="5dp" />
        
    </LinearLayout>

</LinearLayout>